src/parse/parser/snapshots/geam__parse__parser__tests__reject_echo.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  echo \"debug\"\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "echo expressions",
    },
    location: SrcSpan {
        start: 19,
        end: 23,
    },
}
