src/parse/parser/snapshots/geam__parse__parser__tests__reject_let_assert.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(value) {\n  let assert Ok(inner) = value\n  inner\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "let assert",
    },
    location: SrcSpan {
        start: 28,
        end: 34,
    },
}
