src/parse/parser/snapshots/geam__parse__parser__tests__reject_list_pattern_spread.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(value) {\n  case value {\n    [head, ..tail] -> head\n  }\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "list pattern spread",
    },
    location: SrcSpan {
        start: 48,
        end: 50,
    },
}
