src/parse/parser/snapshots/geam__parse__parser__tests__reject_list_spread.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(xs) {\n  [1, ..xs]\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "list spread",
    },
    location: SrcSpan {
        start: 25,
        end: 27,
    },
}
