src/parse/parser/snapshots/geam__parse__parser__tests__reject_named_discard_function_argument.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn ignore(_ignore_me: Int) {\n  98\n}\n\"#)"
---
ParseError {
    error: ExpectedName,
    location: SrcSpan {
        start: 15,
        end: 25,
    },
}
