src/parse/parser/snapshots/geam__parse__parser__tests__reject_opaque.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub opaque type Secret {\n  Secret\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "opaque types",
    },
    location: SrcSpan {
        start: 5,
        end: 11,
    },
}
