src/parse/parser/snapshots/geam__parse__parser__tests__reject_panic.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  panic\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "panic expressions",
    },
    location: SrcSpan {
        start: 19,
        end: 24,
    },
}
