src/parse/parser/snapshots/geam__parse__parser__tests__reject_record_update.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(user) {\n  User(..user, name: \"x\")\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "record update",
    },
    location: SrcSpan {
        start: 28,
        end: 30,
    },
}
