src/parse/parser/snapshots/geam__parse__parser__tests__reject_target_attribute.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\n@target(erlang)\npub fn main() {\n  1\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "attributes",
    },
    location: SrcSpan {
        start: 1,
        end: 2,
    },
}
