src/parse/parser/snapshots/geam__parse__parser__tests__reject_todo.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main() {\n  todo\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "todo expressions",
    },
    location: SrcSpan {
        start: 19,
        end: 23,
    },
}
