src/parse/parser/snapshots/geam__parse__parser__tests__reject_type_alias_keyword.snap
---
source: src/parse/parser/tests.rs
expression: "reject(\"type alias UserId = Int\")"
---
ParseError {
    error: ExpectedUpName,
    location: SrcSpan {
        start: 5,
        end: 10,
    },
}
