src/parse/parser/snapshots/geam__parse__parser__tests__reject_use.snap
---
source: src/parse/parser/tests.rs
expression: "reject(r#\"\npub fn main(result) {\n  use value <- result.try(result)\n  value\n}\n\"#)"
---
ParseError {
    error: UnsupportedSyntax {
        syntax: "use expressions",
    },
    location: SrcSpan {
        start: 25,
        end: 28,
    },
}
